--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,10 @@
 }
 
 #root {
-  width: calc(100% - 40px);
+  width: 100%;
+  min-width: 300px;
+  max-width: 600px;
+  padding: 0 20px;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
