feat: 로그인/회원가입 페이지 퍼블리싱

--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@
 :root {
   --green: #c1e678;
   --blue: #3093f0;
+  --red: #ff0000;
   --shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
@@ -21,6 +22,7 @@
   min-width: 300px;
   max-width: 600px;
   padding: 0 20px;
+  padding-bottom: 20px;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
