--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,15 @@
   font-family: NotoSans;
 }
 
+/* 스크롤 제거 */
+* {
+  scrollbar-width: none; /* 파이어폭스 */
+}
+*::-webkit-scrollbar {
+  /* ( 크롬, 사파리, 오페라, 엣지 ) 동작 */
+  display: none;
+}
+
 @font-face {
   font-family: NotoSans;
   src: url('/NotoSansKR-Regular.otf');
