--- a/src/index.css
+++ b/src/index.css
@@ -58,6 +58,7 @@ textarea {
   background-color: transparent;
   border: 0;
   font-family: inherit;
+  color: #000000;
 
   &:focus {
     outline: none;
